# sailstats-analyzer

./: .gitignore  README.md  package.json  rollup.config.js  tsconfig.json
.github/: build.yml
.github/workflows/: build.yml
src/: About.svelte  App.svelte  Attribution.svelte  ChooseFile.svelte  License.svelte  Navigation.svelte  RadarChart.svelte  RunChart.svelte  SeaMap.svelte  StatRow.svelte  Stats.svelte  main.ts  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
