[package]
name = "sailstats-analyzer"
version = "0.1.0-alpha"
description = "An analyzer for sailing statistics"
authors = ["Thorsten Ernst Schilling"]
license = "AGPL-3.0"
repository = ""
default-run = "sailstats-analyzer"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
chrono = "0.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
